# TradingBot-Binance

./: .gitignore  README.md  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  cli.py  client.py  logging_config.py  orders.py  validators.py
